<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Android FriendConnect</string>
	<string name="name">Name:</string>
	<string name="statusmessage">Status Message:</string>
	<string name="phone">Phone Number:</string>
	<string name="website">Website:</string>
	<string name="details">Details</string>
	<string name="friends">Friends</string>
	<string name="email">Email:</string>
	<string name="password">Password:</string>
	<string name="signin">Sign in</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="title">Title</string>
	<string name="radius">Radius (m)</string>
	<string name="poiActivated">Activated</string>
	<string name="expirationDate">Expiration Date</string>
	<string name="address">Address</string>
	<string name="signinwith">Sign in with your</string>
	<string name="account">Account</string>
	<string name="donthave">Don\'t have a Google Account?</string>
	<string name="savePrefs">Remember me</string>
	<string name="googlelink">https://www.google.com/accounts/NewAccount</string>
	<string name="activityLogin">Login</string>
	<string name="activityTitlePendingInvites">Pending invites</string>
	<string name="activityEditProfile">Profile</string>
	<string name="activityFriendMap">Friend Map</string>
	<string name="activityEditPoi">POI - Point Of Interest</string>
	<string name="activityPOIAlertList">POI Alerts</string>
	<string name="activityPOIAlert">POI Alert</string>
	<string name="friendConnectServerUrl">http://1.latest.android-friendconnect.appspot.com/</string>
	<string name="uiMessageLogin">Logging in...</string>
	<string name="uiMessageSendingInvite">Sending invite...</string>
	<string name="uiMessageLoadingFriends">Loading Friends...</string>
	<string name="uiMessageRemovingFriend">Removing Friend...</string>
	<string name="uiMessageProvideUsernamePassword">You have to provide both, username and password</string>
	<string name="uiMessageProvideEmailAddress">You have to provide an email address</string>
	<string name="uiMessageMinAllowedRadius">You have to enter a radius of at least 10 m!</string>
	<string name="uiMessageLoginErrorMsg">Oops, it seems as if there has been a problem when logging you in!</string>
	<string name="uiMessageAcceptingInvite">Accepting invite...</string>
	<string name="uiMessageRejectingInvite">Rejecting invite...</string>
	<string name="uiMessageLoadingInvites">Retrieving pending invites...</string>
	<string name="uiMessageSavingProfile">Saving profile...</string>
	<string name="uiMessageSaveProfile">Save Profile</string>
	<string name="uiMessageCannotInviteYourself">You cannot invite yourself ;)</string>
	<string name="uiMessageRemovingPOIAlert">Removing POI Alert...</string>
	<string name="uiMessageSavingPOIAlert">Saving POI Alert...</string>
	<string name="uiMessageLocationProviderOutOfService">Oops, it seems as if your location provider is out of service!</string>
	<string name="uiMessageLocationProviderTemporarilyUnavailable">Oops, your location provider is temporarily unavailable.</string>
	<string name="uiMessageLocationProviderDisabled">You disabled the location provider. We cannot update your location any more :(. This may lead to incorrect behaviour of the program!</string>
	<string name="uiMessageFriendInviteSuccessful">Your friend has been invited successfully.</string>
	<string name="uiMessageFriendInviteFailure">Oops, there was a problem inviting your friend. We're sorry, please try again.</string>
	<string name="uiMessageFriendRemovalFailure">Oops, there was a problem in removing your friend. We're sorry, please try again.</string>
	<string name="uiMessageInvalidLocation">Oops...couldn't find the given location.</string>
	<string name="menuAddFriend">Add Friend</string>
	<string name="menuRemoveFriend">Remove Friend</string>
	<string name="menuPendingInvitesListView">Pending Invites</string>
	<string name="menuEditProfile">Edit Profile</string>
	<string name="menuAcceptInvite">Accept Invite</string>
	<string name="menuRejectInvite">Reject Invite</string>
	<string name="menuRefresh">Refresh</string>
	<string name="menuMapView">Friend Map</string>
	<string name="menuCenterMap">Locate me</string>
	<string name="menuAddPoiAlert">Add POI Alert</string>
	<string name="menuRemovePoiAlert">Remove POI Alert</string>
	<string name="menuListPoiAlerts">List POI Alerts</string>
	<string name="menuShowOnMap">Locate on Map</string>
	<string name="invitation">FriendConnect Invitation</string>
	<string name="sendInvite">Send Invite</string>
	<string name="notificationNewPoiAlert">New POI Alert!</string>
	<string name="notificationText">&quot;'%1$s' is nearby to '%2$s'&quot;</string>
	<string name="notificationLocationProblem">Location problem</string>
	<string name="notificationLocationTitle">Oops! No location provider</string>
	<string name="notificationLocationText">Click to change your settings</string>
	<string name="inviteFriend">Type the email address of the person you would like to invite:</string>
	<string name="contactFriendText">&quot;'%1$s' is nearby to '%2$s'&quot;! Please select from one of the options listed below to contact him/her:</string>
	<string name="radioButtonEmail">Email</string>
	<string name="radioButtonPhone">Phone</string>
	<string name="radioButtonSms">SMS</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="exit">Exit</string>
	<string name="dialogRemoveFriendMessage">&quot;Are you sure you want to remove '%1$s'?&quot;</string>
	<string name="dialogRemoveFriendTitle">Confirm Remove</string>
	<string name="dialogRejectInvitationTitle">Confirm Reject</string>
	<string name="dialogRejectInvitationMessage">&quot;Are you sure you want to reject the friendship request of '%1$s'?&quot;</string>
	<string name="uiMessageEditProfileErrorMsg">Oops, it seems as if there has been a problem when updating your profile!</string>
	<string name="uiMessageEditProfileSuccessMsg">Your profile has been successfully updated.</string>
	<string name="dialogRemovePOIAlertMessage">&quot;Are you sure you want to remove '%1$s'?&quot;</string>
	<string name="dialogRemovePOIAlertTitle">Confirm Remove</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="dialogCaptchaRequiredTitle">Unlock Google Account</string>
	<string name="dialogCaptchaRequiredMessage">Your Google account seems to be locked. Do you wish to unlock it now?</string>
	<string name="googleUnlockAccountLink">https://www.google.com/accounts/DisplayUnlockCaptcha</string>
</resources>
