<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"> 
<TableLayout
	android:layout_height="fill_parent" android:layout_width="fill_parent" android:stretchColumns="1,2"
	android:background="#e8eefa" android:padding="2dp" >
	<TableRow android:paddingBottom="5dp">
		<TextView android:layout_span="3" android:text="@string/signinwith" android:layout_gravity="center_horizontal" android:textColor="#000000"/>
	</TableRow>
	<TableRow android:paddingBottom="5dp">
		<ImageView android:layout_span="2" android:layout_gravity="right" android:src="@drawable/google_transparent"/>
		<TextView android:text="@string/account" android:textColor="#000000" android:textStyle="bold" android:textSize="8pt"/>
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/textViewEmail" android:text="@string/email" android:textColor="#000000" />
		<EditText android:id="@+id/editTextEmail" android:layout_span="2" android:maxLines="1" />
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/textViewPassword" android:text="@string/password" android:textColor="#000000" />
		<EditText android:id="@+id/editTextPassword"
			android:password="true" android:layout_span="2" android:maxLines="1"/>
	</TableRow>
	<TableRow>
		<CheckBox android:id="@+id/checkBoxSavePassword" android:checked="false" />
		<TextView android:id="@+id/textViewSavePrefs" android:text="@string/savePrefs" android:textColor="#000000" android:layout_span="2"/>
	</TableRow>
	<TableRow android:paddingBottom="20dp">
		<Button android:layout_span="3" android:layout_gravity="center_horizontal" android:id="@+id/buttonSignIn"
			android:text="@string/signin" />
	</TableRow>
	<TableRow android:paddingBottom="5dp">
		<TextView android:layout_span="3" android:text="@string/donthave" android:layout_gravity="center_horizontal" android:textColor="#000000"/>
	</TableRow>
	<TableRow>
		<TextView android:autoLink="web" android:layout_span="3" android:text="@string/googlelink" android:layout_gravity="center_horizontal" android:textColor="#000000"/>
	</TableRow>
</TableLayout>
</ScrollView>