<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent" android:stretchColumns="1,2"
	android:padding="2dp" >
	<TableRow>
		<TextView android:id="@+id/textViewEmail" android:text="@string/email" android:textColor="#000000" />
		<EditText android:id="@+id/editTextEmail" android:layout_span="2" android:maxLines="1" android:editable="false" />
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/textViewStatusMsg" android:text="@string/statusmessage" android:textColor="#000000" />
		<EditText android:id="@+id/editTextStatusMsg" android:layout_span="2" android:maxLines="1" />
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/textViewName" android:text="@string/name" android:textColor="#000000" />
		<EditText android:id="@+id/editTextName" android:layout_span="2" android:maxLines="1" />
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/textViewWebsite" android:text="@string/website" android:textColor="#000000" />
		<EditText android:id="@+id/editTextWebsite" android:layout_span="2" android:maxLines="1" />
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/textViewPhone" android:text="@string/phone" android:textColor="#000000" />
		<EditText android:id="@+id/editTextPhone" android:layout_span="2" android:maxLines="1" />
	</TableRow>			
	<TableRow android:paddingBottom="20dp">
		<Button android:layout_span="3" android:layout_gravity="center_horizontal" android:id="@+id/buttonSaveProfile"
			android:text="@string/signin" />
	</TableRow>
</TableLayout>
