<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content"> 
<LinearLayout
	android:id="@+id/layout_root" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:padding="10dp">

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/email"/>

	<TextView android:id="@+id/textViewEmail"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingBottom="10dp" android:autoLink="email" />

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/name"/>

	<TextView android:id="@+id/textViewName"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingBottom="10dp" />

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/phone"/>

	<TextView android:id="@+id/textViewPhone"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingBottom="10dp" android:autoLink="phone" />
		
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/website"/>

	<TextView android:id="@+id/textViewWebsite"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingBottom="10dp" android:autoLink="web" />

	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textStyle="bold" android:text="@string/statusmessage"/>

	<TextView android:id="@+id/textViewStatusmessage"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>